# python-minesweeper

./: README.md  cell.py  main.py  pyproject.toml  settings.py
components/: frames.py  gameboard.py  menu.py
