[tool.poetry]
name = "python-minesweeper"
version = "0.1.0"
description = ""
authors = ["Grant Ramsay <seapagan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pylint = "^2.17.2"
pep8-naming = "^0.13.3"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
